--- a/HYYBLO_prog3/HYYBLO_prog3.csproj
+++ b/HYYBLO_prog3/HYYBLO_prog3.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Road.cs" />
+    <Compile Include="Warehouse.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
