Basic path finding and store items in a list instead of a 2D array

--- a/HYYBLO_prog3/HYYBLO_prog3.csproj
+++ b/HYYBLO_prog3/HYYBLO_prog3.csproj
@@ -60,7 +60,9 @@
     </ApplicationDefinition>
     <Compile Include="Camera.cs" />
     <Compile Include="Direction.cs" />
+    <Compile Include="PathFinding.cs" />
     <Compile Include="Road.cs" />
+    <Compile Include="Vehicle.cs" />
     <Compile Include="Warehouse.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
