--- a/HYYBLO_prog3/HYYBLO_prog3.csproj
+++ b/HYYBLO_prog3/HYYBLO_prog3.csproj
@@ -81,12 +81,11 @@
     <Compile Include="Model\PathFinding.cs" />
     <Compile Include="BL\Road.cs" />
     <Compile Include="BL\Vehicle.cs" />
-    <Compile Include="BL\Building\Warehouse\Warehouse.cs" />
     <Compile Include="BL\Building\Warehouse\WarehouseBuilding.cs" />
     <Compile Include="BL\Building\Warehouse\WarehouseLot12.cs" />
     <Compile Include="BL\Building\Warehouse\WarehouseLot21.cs" />
     <Compile Include="BL\Building\Warehouse\WarehouseLot22.cs" />
-    <Page Include="View\MainWindow.xaml">
+    <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -99,7 +98,7 @@
     <Compile Include="View\GameView.cs" />
     <Compile Include="BL\Grass.cs" />
     <Compile Include="BL\Building\House.cs" />
-    <Compile Include="View\MainWindow.xaml.cs">
+    <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
