--- a/HYYBLO_prog3/HYYBLO_prog3.csproj
+++ b/HYYBLO_prog3/HYYBLO_prog3.csproj
@@ -79,11 +79,9 @@
     </ApplicationDefinition>
     <Compile Include="BL\Building\BuildingBase.cs" />
     <Compile Include="BL\Building\Factory.cs" />
-    <Compile Include="BL\EditWarehouse.xaml.cs">
-      <DependentUpon>EditWarehouse.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="BL\Building\Refinery.cs" />
     <Compile Include="BL\Warehouse.cs" />
-    <Compile Include="Model\Camera.cs" />
+    <Compile Include="View\Camera.cs" />
     <Compile Include="Model\Direction.cs" />
     <Compile Include="Model\PathFinding.cs" />
     <Compile Include="BL\Road.cs" />
@@ -92,11 +90,10 @@
     <Compile Include="BL\Building\Warehouse\WarehouseLot12.cs" />
     <Compile Include="BL\Building\Warehouse\WarehouseLot21.cs" />
     <Compile Include="BL\Building\Warehouse\WarehouseLot22.cs" />
-    <Page Include="BL\EditWarehouse.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="MainWindow.xaml">
+    <Compile Include="View\GameWindow.xaml.cs">
+      <DependentUpon>GameWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -106,13 +103,24 @@
     </Compile>
     <Compile Include="BL\Building\Building.cs" />
     <Compile Include="BL\Game.cs" />
+    <Compile Include="View\EditWarehouse.xaml.cs">
+      <DependentUpon>EditWarehouse.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\GameView.cs" />
     <Compile Include="BL\Grass.cs" />
     <Compile Include="BL\Building\House.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\EditWarehouse.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\GameWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Map.cs" />
